# aa-urban-tree

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
apps/backend/: .env.example  Dockerfile  TESTING.md  pyproject.toml
apps/backend/scripts/: seed_db.py
apps/backend/src/: auth_deps.py  config.py  local.db  main.py
apps/backend/src/applications/: __init__.py
apps/backend/src/auth/: __init__.py
apps/backend/src/core/: __init__.py  container.py  email.py  upload.py
apps/backend/src/data/: __init__.py  budget_categories_seed.py  counties_seed.py  project_seed.py  seed_users_data.py
apps/backend/src/documents/: __init__.py  categories.py  errors.py  thumbnail.py  validation.py
apps/backend/src/forestry_board/: __init__.py  county_filter.py  email_templates.py  roles.py  signature.py  states.py
apps/backend/src/middleware/: __init__.py  security_headers.py
apps/backend/src/models/: __init__.py  program.py
apps/backend/src/observability/: __init__.py  metrics.py  middleware.py
apps/backend/src/routes/: applications.py  auth.py  budget_categories.py  complaints.py  config.py  counties.py  documents.py  forestry_board.py  form_agent.py  health.py  observability.py  preferences.py  project_types.py  public.py  site_ownership.py  whatsapp.py
apps/backend/src/services/: application_form_service.py  audit_service.py  auth_service.py  base.py  complaint_service.py  contact_information_service.py  document_management_service.py  example_service.py  financial_information_service.py  forestry_board_service.py  form_agent_service.py  preference_service.py  program_config.py  project_information_service.py  public_data_query_service.py  public_listing_service.py  whatsapp_service.py
apps/backend/src/utils/: confirmation_number.py  errors.py  logging.py  pii.py  responses.py  seed_budget_categories.py  (+6 more)
apps/backend/tests/: conftest.py  factories.py  performance.py  test_api_client.py  test_application_form_service.py  test_auth_service.py  test_contact_information_service.py  test_document_management_service.py  test_document_validation.py  test_example_service.py  test_financial_information_service.py  test_forestry_board_framework.py  test_forestry_board_service.py  test_project_information_service.py  test_public_listing_service.py  test_service_framework.py
libs/authentication/: README.md  pyproject.toml
libs/authentication/src/: __init__.py
libs/authentication/tests/: test_auth_provider_interface.py  test_email_validator.py  test_errors.py  test_jwt.py  test_jwt_provider.py  test_lockout.py  test_password.py  test_session.py
(+170 files in other folders)
