[project]
name = "authentication"
version = "0.1.0"
description = "Pluggable authentication provider"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0",
    "PyJWT>=2.8",
    "fastapi",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["authentication*"]
